--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,7 @@
     <script src="./index.js"></script>
     <script src="./js/modal.js"></script>
     <script src="./js/mobile-menu.js"></script>
+    <script src="./js/overlay.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     
     <!-- Initialize Swiper -->
